updated guessMe game

--- a/projs/guessMe/index.html
+++ b/projs/guessMe/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My App</title>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/app.css" />
 </head>
 
@@ -19,7 +19,7 @@
       <h2>Think of Someone...</h2>
       <button onclick="startGuessing()" class="btn btn-lg btn-success">I'm Ready!</button>
     </section>
-    
+
     <section class="gameQuest" style="display: none">
       <h2></h2>
       <button onclick="userResponse('yes')" class="btn btn-info">Yes</button>
