--- a/projs/psdToHtml/index.html
+++ b/projs/psdToHtml/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="curtain hidden" onclick="toggleMenu()"></div>
     <header>
         <div class="container flex space-between center-align">
             <h1 class="logo">
@@ -17,19 +18,28 @@
             </h1>
             <nav>
                 <ul class="main-menu clean-list flex center-align">
-                    <li>Journal</li>
-                    <li>About</li>
-                    <li>Work</li>
-                    <li>Contact</li>
+                    <li>
+                        <a href="#" class="active">Journal</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Work</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
                 </ul>
             </nav>
+            <button onclick="toggleMenu()">☰</button>
         </div>
     </header>
 
     <main class="container">
         <ul class="blog-posts clean-list flex flex-wrap">
             <li>
-                <img src="img/01.png" alt="England countryside scenery" />
+                <div class="img" title="England countryside scenery" style="background-image: url('../img/01.png')"></div>
                 <div class="post flex col space-between">
                     <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>
@@ -38,11 +48,11 @@
                         <br/>
                         <br/> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...
                     </p>
-                    <button>Continue Reading</button>
+                    <button onclick="toggleSubscribe()">Continue Reading</button>
                 </div>
             </li>
             <li>
-                <img src="img/02.png" alt="Sunrise over field" />
+                <div class="img" title="Sunrise over field"  style="background-image: url('../img/02.png')"></div>
                 <div class="post flex col space-between">
                     <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>
@@ -51,10 +61,10 @@
                         <br/>
                         <br/> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...
                     </p>
-                    <button>Continue Reading</button>
+                    <button onclick="toggleSubscribe()">Continue Reading</button>
             </li>
             <li>
-                <img src="img/03.png" alt="Wheat field" />
+                <div class="img" title="Wheat field"  style="background-image: url('../img/03.png')"></div>
                 <div class="post flex col space-between">
                     <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>
@@ -63,9 +73,20 @@
                         <br/>
                         <br/> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...
                     </p>
-                    <button>Continue Reading</button>
+                    <button onclick="toggleSubscribe()">Continue Reading</button>
             </li>
         </ul>
+
+        <div class="subscribe-modal opaque">
+            <button onclick="toggleSubscribe()">X</button>
+            <div class="modal-content flex col center-align">
+                <h3>Join us to get access to the latest stories!</h3>
+                <form>
+                    <input type="email" placeholder="Enter email address" />
+                    <button>Submit</button>
+                </form>
+            </div>
+        </div>
 
         <div class="paging flex space-between center-align">
             <button>← Previous</button>
@@ -88,6 +109,25 @@
             <button><span class="fa fa-dribbble"></span></button>
         </div>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            var elMenu = document.querySelector('.main-menu');
+            var elCurtain = document.querySelector('.curtain');
+            var elBtn = document.querySelector('header button');
+            elMenu.classList.toggle('open');
+            elCurtain.classList.toggle('hidden');
+            if (elMenu.classList.contains('open')) elBtn.innerHTML = 'X';
+            else elBtn.innerHTML = '☰';
+        }
+
+        function toggleSubscribe() {
+            var elModal = document.querySelector('.subscribe-modal');
+            var elCurtain = document.querySelector('.curtain');
+            elModal.classList.toggle('opaque');
+            elCurtain.classList.toggle('hidden');
+        }
+    </script>
 </body>
 
 </html>
