updated background color, padding and box shadow for me section and portfolio section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
 <!-- Me -->
-<section class="bg-light" id="me" style="padding: 0px;">
+<section class="me" id="me">
   <div class="row">
     <div class="col-sm-4">
       <div class="team-member">
@@ -173,7 +173,7 @@
   </section> -->
 
   <!-- Portfolio Grid -->
-  <section class="bg-light" id="portfolio">
+  <section class="portfolio" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
