deleted unnecessary tablet.css, and changed url of images

--- a/projs/psdToHtml/index.html
+++ b/projs/psdToHtml/index.html
@@ -39,7 +39,7 @@
     <main class="container">
         <ul class="blog-posts clean-list flex flex-wrap">
             <li>
-                <div class="img" title="England countryside scenery" style="background-image: url('../img/01.png')"></div>
+                <div class="img" title="England countryside scenery" style="background-image: url('img/01.png')"></div>
                 <div class="post flex col space-between">
                     <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>
@@ -52,7 +52,7 @@
                 </div>
             </li>
             <li>
-                <div class="img" title="Sunrise over field"  style="background-image: url('../img/02.png')"></div>
+                <div class="img" title="Sunrise over field"  style="background-image: url('img/02.png')"></div>
                 <div class="post flex col space-between">
                     <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>
@@ -64,7 +64,7 @@
                     <button onclick="toggleSubscribe()">Continue Reading</button>
             </li>
             <li>
-                <div class="img" title="Wheat field"  style="background-image: url('../img/03.png')"></div>
+                <div class="img" title="Wheat field"  style="background-image: url('img/03.png')"></div>
                 <div class="post flex col space-between">
                     <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>
