init renders address

--- a/projs/travel-tip/index.html
+++ b/projs/travel-tip/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/main.css" rel="stylesheet" />
     <title>TravelTip</title>
 </head>
 <body>
@@ -19,6 +20,8 @@
         <h4></h4><h5></h5>
         <p></p>
     </div>
+
+    <input class="copy-loc" />
 
     <script type="module" src="js/main.js"></script>
 </body>
