--- a/projs/travel-tip/index.html
+++ b/projs/travel-tip/index.html
@@ -21,7 +21,7 @@
         <p></p>
     </div>
 
-    <input class="copy-loc" />
+    <input class="copy-loc hidden" />
 
     <script type="module" src="js/main.js"></script>
 </body>
